Completed Adding new Staff

--- a/Zadatak_1/Dan_XLIX_Nemanja_Pilipovic/Dan_XLIX_Nemanja_Pilipovic.csproj
+++ b/Zadatak_1/Dan_XLIX_Nemanja_Pilipovic/Dan_XLIX_Nemanja_Pilipovic.csproj
@@ -91,6 +91,7 @@
     </Compile>
     <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="ViewModels\CreateManagerViewModel.cs" />
+    <Compile Include="ViewModels\CreateStaffViewModel.cs" />
     <Compile Include="ViewModels\OwnerViewModel.cs" />
     <Compile Include="Views\CreateManagerView.xaml.cs">
       <DependentUpon>CreateManagerView.xaml</DependentUpon>
